# chesspp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
config/: config.txt
docs/: board.txt  debug.pgn  dependencies.md  design.md  issues.md  todo.md
src/: chess.cpp  chess.h  config.hpp  constants.cpp  constants.h  constants.hpp  curses.cpp  draw.cpp  draw.h  draw.hpp  game.cpp  game.h  game.hpp  logger.cpp  logger.h  logger.hpp  main.cpp  move.cpp  move.h  moveInput.cpp  moveInput.hpp  out.hpp  pgn.hpp  piece.cpp  piece.h  piece.hpp  positionHash.hpp  render.cpp  render.h  render.hpp  test.cpp  timeControl.cpp  timeControl.hpp  types.h  types.hpp  utils.cpp  utils.h  utils.hpp
src/Renderer/: frameBuilder.cpp  frameBuilder.hpp  renderer.cpp  renderer.hpp
src/old-ui/: curses.cpp  cursor.cpp  cursor.h  render.cpp  render.h
src/renderer/: config.hpp  frameBuilder.cpp  frameBuilder.hpp  renderer.cpp  renderer.hpp
tests/: test_draw.cpp  test_game.cpp  test_pieces.cpp  test_render.cpp  test_utils.cpp
